# ScalKingdoms

./: .gitmodules  CMakeLists.txt  compile_flags.txt  premake5.lua
Game/assets/shaders/: lit_tile.frag
Game/src/: AI.h  Actions.cpp  Actions.h  Allocator.h  Base.h  Components.h  Console.cpp  Console.h  Core.h  Debug.cpp  Debug.h  Entity.h  GUI.cpp  GUI.h  Game.cpp  Game.h  GameEntry.h  GameMode.cpp  GameMode.h  GameState.cpp  GameState.h  GameTypes.h  Lighting.h  Main.cpp  Memory.cpp  Memory.h  Pathfinder.cpp  Pathfinder.h  Profiler.cpp  Profiler.h  RectI.h  Regions.cpp  Regions.h  RenderUtils.cpp  RenderUtils.h  Sprite.cpp  Sprite.h  Systems.cpp  Systems.h  Tasks.h  (+12 more)
Game/src/Lib/: Arena.cpp  Arena.h  FileParser.h  FreeList.cpp  FreeList.h  GeneralAllocator.cpp  GeneralAllocator.h  Handles.h  Jobs.cpp  Jobs.h  JobsWin32.cpp  JobsWin32.h  LinearArena.cpp  LinearArena.h  Memory.h  MemoryArena.cpp  MemoryArena.h  Pool.cpp  Pool.h  Random.cpp  Random.h  String.h
Game/src/Structures/: ActionQueue.h  Actions.cpp  ArrayList.h  BHeap.cpp  BHeap.h  BitArray.h  HashMap.cpp  HashMap.h  HashMapKV.cpp  HashMapKV.h  HashMapStr.cpp  HashMapStr.h  HashMapT.h  HashSet.cpp  HashSet.h  HashSetT.h  ItemArrays.h  MemoryArena.cpp  MemoryArena.h  PoolArray.h  Queue.h  QueueThreaded.h  SList.h  SparseSet.h  StaticArray.h  TemplateHashMap.h
